Forgot we're in jdk 8