@@ -1,11 +1,17 @@
 package com.metallumultorum.echolocate;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Vector;
+
 
 public class Echolocate {
     public static List<Vector<Double>> echolocate() {
         // Placeholder logic
-        return List.of(new Vector<>(List.of(1.0, 2.0, 3.0)));
+        List<Vector<Double>> result = new ArrayList<>();
+        result.add(new Vector<>(Arrays.asList(1.0, 2.0, 3.0)));
+        return result;
+
     }
 }
